--- a/app/b2c/view/wap/member/modify_receiver.html
+++ b/app/b2c/view/wap/member/modify_receiver.html
@@ -31,7 +31,7 @@
             <div class="c-g">
                 <label class="c-l">邮编</label>
                 <div class="c">
-                    <input type="text" class="text" name="zip" value="<{$zipcode}>" />
+                    <input type="text" class="text" name="zipcode" value="<{$zipcode}>"  vtype="required&&zip" />
                 </div>
             </div>
             <div class="c-g">
@@ -43,17 +43,17 @@
             <div class="c-g">
                 <label class="c-l">手机</label>
                 <div class="c">
-                    <input type="text" class="text" name="mobile" value="<{$phone.mobile}>" vtype="mobile" data-caution="手机不能为空" />
+                    <input type="text" class="text" name="phone[mobile]" value="<{$phone.mobile}>" vtype="mobile" data-caution="手机不能为空" />
                 </div>
             </div>
             <div class="c-g">
                 <label class="c-l">固定电话</label>
                 <div class="c">
-                    <input type="text" class="text" name="tel" value="<{$phone.telephone}>" vtype="tel" />
+                    <input type="text" class="text" name="phone[telephone]" value="<{$phone.telephone}>" vtype="tel" />
                 </div>
             </div>
             <div class="c-g-c">
-                <input type="checkbox" name="def_addr" value="1" id="def_addr_check" <{if $default eq "1"}>checked=checked<{/if}>/>
+                <input type="checkbox" name="default" value="1" id="def_addr_check" <{if $default eq "1"}>checked=checked<{/if}>/>
                 <label for="def_addr_check">设为默认收货地址</label>
             </div>
             <div class="btn-bar">
