--- a/app/b2c/view/wap/member/index.html
+++ b/app/b2c/view/wap/member/index.html
@@ -57,7 +57,7 @@
                         <{/if}>
                     </div>
                     <div class="col">
-                        <a href="<{link app=b2c ctl='wap_member'  full='1' act='point_history'}>">
+                        <a href="<{link app=jdsale ctl=wap_aftersales act=index  full='1'}>">
                             查看历史积分
                             <i class="arr right"></i>
                         </a>
