--- a/app/b2c/view/wap/gallery/type/list.html
+++ b/app/b2c/view/wap/gallery/type/list.html
@@ -44,7 +44,7 @@
 
 <{else}>
 <div class="no-data">
-    <p class="warn">抱歉！没有符合条件的商品</p>
+    <p class="warn">111抱歉！没有符合条件的商品</p>
     <p>您可以更改关键字重新查找</p>
 </div>
 <{/if}>
